--- a/symfonyapp/.env
+++ b/symfonyapp/.env
@@ -21,7 +21,8 @@ APP_SECRET=3930e135b0fec5d60359b9879620b4d3
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_URL=smtp://localhost:1025
+
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,7 +30,25 @@ APP_SECRET=3930e135b0fec5d60359b9879620b4d3
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=mysql://root:root@symfony_mysql:3306/ContactForm
-DATABASE_URL=mysql://root:root@mysql:3306/ContactForm
+#DATABASE_URL=mysql://root:root@symfony_mysql:3306/ContactForm
+DATABASE_URL=mysql://root:root@127.0.0.1:3307/ContactForm
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+#MAIL_HOST=smtp.gmail.com
+#MAIL_PORT=465
+#MAIL_ENCRYPTION=ssl
+#MAIL_USER=amevigbe41@gmail.com
+#MAIL_PASSWORD=kanoli2014
+#MAIL_AUTH_MODE=login
+#MAILER_DSN=smtp://maildev:25
+#MAILER_URL=smtp://${MAIL_HOST}:${MAIL_PORT}?encryption=${MAIL_ENCRYPTION}&auth_mode=${MAIL_AUTH_MODE}&username=${MAIL_USER}&password=${MAIL_PASSWORD}?verify_peer=0
+###< symfony/swiftmailer-bundle ###
